    + Added:
      - init.d-script-does-not-implement-optional-option
      - missing-build-dependency-for-dh-addon
      - python-depends-but-no-python-helper
      - python3-depends-but-no-python3-helper
      - data.tar.xz-member-without-dpkg-pre-depends

  * checks/*:
    + [JW] Replace common_data.pm with Lintian::Check.
    + [NT] Remove some unused "use lib <expr>" from various checks.
  * checks/binaries:
    + [JW] Allow binaries to use "/usr/lib/$srcpkg/" in RPATHs.
      (Closes: #642092)
    + [JW] Fixed a false-positive when using the multiarch dir in
      RPATH.  (Closes: #646817)
  * checks/changes-file{,.desc}:
    + [NT] Added the "precise" to the list of Ubuntu distributions.
      Thanks to Loïc Minier for the patch.
    + [NT] Accept release codename in the changes file.  Thanks to
      Julien Cristau for the report.  (Closes: #637540)
  * checks/common_data.pm:
    + [JW] Merged into Lintian::Check.
  * checks/cruft{,.desc}:
    + [NT] Escape path when using them in regexes.  (Closes: #642902)
    + [NT] Extended the description of the tag for non-native packages
      with native versions.  Thanks to Jari Aalto for the report.
      (Closes: #580048)
  * checks/deb-format{,.desc}:
    + [NT] Added check for using .xz compression in deb files without
      versioned Pre-Depends on dpkg.  The severity is pedantic for
      Debian and serious for Ubuntu.  Thanks to Aaron M. Ucko for the
      rapport.  (Closes: #648350)
  * checks/dehelper{,.desc}:
    + [JW,NT] Check for versioned dependencies for some dh_commands.
      (Closes: #641035)
    + [JW] Detect missing dependencies for using dh sequences.
      (Closes: #613327)
    + [JW] Parse continuation lines in d/rules.
    + [JW] Only emit brace-expansion-in-debhelper-config-file at most
      once per file.  (Closes: #644344)
    + [JW] Replaced "=" with " => " in the tag extra for missing-
      build-dependency-for-dh_-command to improve readability.  This